# TCM-Graph-Engine

./: README.md  pyproject.toml
src/tcm/analysis/: analysis_engine.py
src/tcm/builders/: graph_builder.py
src/tcm/core/: enums.py  exceptions.py  models.py
src/tcm/extractors/: base.py  herbs.py  patterns.py  points.py  signs.py
src/tcm/graph/: enhanced_query_engine.py  knowledge_graph.py  query_engine.py
src/tcm/models/: foundation.py
src/tcm/processors/: base.py  document_processor.py  reference_tracker.py  structure_analyzer.py  text_extractor.py
src/tcm/rag/: query_orchestator.py
src/tcm/scripts/: build_graph.py  validate_graph.py
