[project]
name = "tcm-knowledge-system"
version = "0.1.0"
description = "Traditional Chinese Medicine Knowledge Graph System"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "TCM Knowledge Systems Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "networkx>=3.2",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "PyMuPDF>=1.23.0",  # For PDF processing
    "spacy>=3.7.0",     # For text processing
    "rdflib>=7.0.0",    # For knowledge graph serialization
    "pytest>=8.0.0",    # For testing
    "openai>=1.59.7",   # For GPT-3 integration
    "anthropic>=0.42.0", # For Claude integration
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tcm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3